manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linebot
  labels:
    app: linebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linebot
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: linebot
        tier: api
    spec:
      containers:
        - name: linebot-api
          image: us.gcr.io/mintak/linebot/python
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 5
          # IngressのヘルスチェックのパスはreadinessProbeを見るため、カスタマイズのために設定している、本来はliveness Probeのみ or 違うパスの指定をすべき
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 5
      restartPolicy: Always
